--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,20 @@
 [project]
 name = "zeicold-bot"
 version = "0.1.0"
-description = "Add your description here"
+description = "System Tray Bot by FreeSimpleGUIQt"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.14,<4.0"
 dependencies = [
-    "addict>=2.4.0",
     "attrs>=25.4.0",
     "freesimpleguiqt>=2.0.0",
-    "json5>=0.12.1",
     "loguru>=0.7.3",
-    "pyinstaller>=6.17.0",
-    "watchdog>=6.0.0",
+    "pdoc>=16.0.0",
 ]
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.5.1",
+    "pylint>=4.0.4",
     "pytest>=9.0.2",
 ]
 
@@ -27,3 +26,8 @@ profile = "black"
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules"
+
+[tool.uv.workspace]
+members = [
+    "examples/hentai_mover",
+]
